--- a/source/layouts/layout.html.haml
+++ b/source/layouts/layout.html.haml
@@ -15,6 +15,7 @@
   = stylesheet_link_tag 'all'
   = javascript_include_tag 'all'
 %body{class: page_classes}
+  = partial 'partials/google_analytics'
   %header
     %section.container
       %h1 Avid Online
